<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text="@string/label_id"
	    />
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutID" android:layout_marginTop="5sp" android:layout_marginBottom="5sp">
		<Button android:layout_width="wrap_content" android:id="@+id/btnLaunchDustyTubaFakeAlice" android:layout_height="wrap_content" android:text="@string/launch_dustytuba_fake_alice" android:layout_weight="1"></Button>
		<Button android:layout_width="wrap_content" android:id="@+id/btnLaunchDustyTubaFakeBob" android:layout_height="wrap_content" android:text="@string/launch_dustytuba_fake_bob" android:layout_weight="1"></Button>
		<Button android:layout_width="wrap_content" android:id="@+id/btnLaunchDustyTubaManual" android:layout_height="wrap_content" android:text="@string/launch_dustytuba_manual" android:layout_weight="1"></Button>
		<Button android:layout_width="wrap_content" android:id="@+id/btnLaunchDustyTubaBump" android:layout_height="wrap_content" android:text="@string/launch_dustytuba_bump" android:layout_weight="1"></Button>
    </LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutMAC" android:layout_marginTop="5sp" android:layout_marginBottom="0sp">
   	<TextView  
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content" 
	    android:text="@string/label_connect_bt"
	    android:layout_marginRight="5sp"
	    />
	<TextView  
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content" 
	    android:text=""
	    android:id="@+id/lblMAC"
	    />
	</LinearLayout>
	<LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/linearLayoutSetup" android:layout_marginTop="5sp" android:layout_marginBottom="20sp">
		<Button android:layout_width="wrap_content" android:id="@+id/btnSetupBT" android:layout_height="wrap_content" android:text="@string/launch_dustytuba_bt" android:layout_weight="1"></Button>
	</LinearLayout>
	    
</LinearLayout>
